feat: complete V3.8.5 history quality closure